--- a/dlnd_face_generation.ipynb
+++ b/dlnd_face_generation.ipynb
@@ -376,13 +376,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# helper deconv function\n",
+    "def deconv(in_channels, out_channels, kernel_size, stride=2, padding=1, batch_norm=True):\n",
+    "    \"\"\"Creates a transposed-convolutional layer, with optional batch normalization.\n",
+    "    \"\"\"\n",
+    "    # create a sequence of transpose + optional batch norm layers\n",
+    "    layers = []\n",
+    "    transpose_conv_layer = nn.ConvTranspose2d(in_channels, out_channels, \n",
+    "                                              kernel_size, stride, padding, bias=False)\n",
+    "    # append transpose convolutional layer\n",
+    "    layers.append(transpose_conv_layer)\n",
+    "    \n",
+    "    if batch_norm:\n",
+    "        # append batchnorm layer\n",
+    "        layers.append(nn.BatchNorm2d(out_channels))\n",
+    "        \n",
+    "    return nn.Sequential(*layers)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tests Passed\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\H247073\\anaconda3\\envs\\deep-learning\\lib\\site-packages\\torch\\nn\\functional.py:1340: UserWarning: nn.functional.tanh is deprecated. Use torch.tanh instead.\n",
+      "  warnings.warn(\"nn.functional.tanh is deprecated. Use torch.tanh instead.\")\n"
+     ]
+    }
+   ],
+   "source": [
     "class Generator(nn.Module):\n",
     "    \n",
-    "    def __init__(self, z_size, conv_dim):\n",
+    "    def __init__(self, z_size, conv_dim=32):\n",
     "        \"\"\"\n",
     "        Initialize the Generator Module\n",
     "        :param z_size: The length of the input latent vector, z\n",
@@ -391,7 +431,15 @@
     "        super(Generator, self).__init__()\n",
     "\n",
     "        # complete init function\n",
+    "        self.conv_dim = conv_dim\n",
     "        \n",
+    "        # first, fully-connected layer\n",
+    "        self.fc = nn.Linear(z_size, conv_dim*4*4*4)\n",
+    "\n",
+    "        # transpose conv layers\n",
+    "        self.t_conv1 = deconv(conv_dim*4, conv_dim*2, 4)\n",
+    "        self.t_conv2 = deconv(conv_dim*2, conv_dim, 4)\n",
+    "        self.t_conv3 = deconv(conv_dim, 3, 4, batch_norm=False)\n",
     "\n",
     "    def forward(self, x):\n",
     "        \"\"\"\n",
@@ -400,8 +448,19 @@
     "        :return: A 32x32x3 Tensor image as output\n",
     "        \"\"\"\n",
     "        # define feedforward behavior\n",
+    "        # fully-connected + reshape \n",
+    "        out = self.fc(x)\n",
+    "        out = out.view(-1, self.conv_dim*4, 4, 4) # (batch_size, depth, 4, 4)\n",
     "        \n",
-    "        return x\n",
+    "        # hidden transpose conv layers + relu\n",
+    "        out = F.relu(self.t_conv1(out))\n",
+    "        out = F.relu(self.t_conv2(out))\n",
+    "        \n",
+    "        # last layer + tanh activation\n",
+    "        out = self.t_conv3(out)\n",
+    "        out = F.tanh(out)\n",
+    "        \n",
+    "        return out\n",
     "\n",
     "\"\"\"\n",
     "DON'T MODIFY ANYTHING IN THIS CELL THAT IS BELOW THIS LINE\n",
