--- a/dlnd_face_generation.ipynb
+++ b/dlnd_face_generation.ipynb
@@ -490,7 +490,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -506,7 +506,10 @@
     "    classname = m.__class__.__name__\n",
     "    \n",
     "    # TODO: Apply initial weights to convolutional and linear layers\n",
-    "    \n",
+    "    if hasattr(m, 'weight') and (classname.find('Conv') != -1 or classname.find('Linear') != -1):\n",
+    "        nn.init.normal_(m.weight.data, 0.0, 0.02)\n",
+    "        if hasattr(m, 'bias') and m.bias is not None:\n",
+    "            nn.init.constant_(m.bias.data, 0.0)\n",
     "    "
    ]
   },
