--- a/dlnd_face_generation.ipynb
+++ b/dlnd_face_generation.ipynb
@@ -490,7 +490,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -526,7 +526,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -558,14 +558,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 84,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Discriminator(\n",
+      "  (conv1): Sequential(\n",
+      "    (0): Conv2d(3, 32, kernel_size=(4, 4), stride=(2, 2), padding=(1, 1), bias=False)\n",
+      "  )\n",
+      "  (conv2): Sequential(\n",
+      "    (0): Conv2d(32, 64, kernel_size=(4, 4), stride=(2, 2), padding=(1, 1), bias=False)\n",
+      "    (1): BatchNorm2d(64, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+      "  )\n",
+      "  (conv3): Sequential(\n",
+      "    (0): Conv2d(64, 128, kernel_size=(4, 4), stride=(2, 2), padding=(1, 1), bias=False)\n",
+      "    (1): BatchNorm2d(128, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+      "  )\n",
+      "  (fc): Linear(in_features=2048, out_features=1, bias=True)\n",
+      ")\n",
+      "\n",
+      "Generator(\n",
+      "  (fc): Linear(in_features=100, out_features=2048, bias=True)\n",
+      "  (t_conv1): Sequential(\n",
+      "    (0): ConvTranspose2d(128, 64, kernel_size=(4, 4), stride=(2, 2), padding=(1, 1), bias=False)\n",
+      "    (1): BatchNorm2d(64, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+      "  )\n",
+      "  (t_conv2): Sequential(\n",
+      "    (0): ConvTranspose2d(64, 32, kernel_size=(4, 4), stride=(2, 2), padding=(1, 1), bias=False)\n",
+      "    (1): BatchNorm2d(32, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+      "  )\n",
+      "  (t_conv3): Sequential(\n",
+      "    (0): ConvTranspose2d(32, 3, kernel_size=(4, 4), stride=(2, 2), padding=(1, 1), bias=False)\n",
+      "  )\n",
+      ")\n"
+     ]
+    }
+   ],
    "source": [
     "# Define model hyperparams\n",
-    "d_conv_dim = \n",
-    "g_conv_dim = \n",
-    "z_size = \n",
+    "d_conv_dim = 32\n",
+    "g_conv_dim = 32\n",
+    "z_size = 100\n",
     "\n",
     "\"\"\"\n",
     "DON'T MODIFY ANYTHING IN THIS CELL THAT IS BELOW THIS LINE\n",
@@ -589,9 +625,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 85,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Training on GPU!\n"
+     ]
+    }
+   ],
    "source": [
     "\"\"\"\n",
     "DON'T MODIFY ANYTHING IN THIS CELL\n",
@@ -632,22 +676,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def real_loss(D_out):\n",
+    "def real_loss(D_out, smooth=False):\n",
     "    '''Calculates how close discriminator outputs are to being real.\n",
     "       param, D_out: discriminator logits\n",
     "       return: real loss'''\n",
-    "    loss = \n",
+    "    batch_size = D_out.size(0)\n",
+    "    # label smoothing\n",
+    "    if smooth:\n",
+    "        # smooth, real labels = 0.9\n",
+    "        labels = torch.ones(batch_size)*0.9\n",
+    "    else:\n",
+    "        labels = torch.ones(batch_size) # real labels = 1\n",
+    "    # move labels to GPU if available     \n",
+    "    if train_on_gpu:\n",
+    "        labels = labels.cuda()\n",
+    "    # binary cross entropy with logits loss\n",
+    "    criterion = nn.BCEWithLogitsLoss()\n",
+    "    # calculate loss\n",
+    "    loss = criterion(D_out.squeeze(), labels)\n",
     "    return loss\n",
     "\n",
     "def fake_loss(D_out):\n",
     "    '''Calculates how close discriminator outputs are to being fake.\n",
     "       param, D_out: discriminator logits\n",
     "       return: fake loss'''\n",
-    "    loss = \n",
+    "    batch_size = D_out.size(0)\n",
+    "    labels = torch.zeros(batch_size) # fake labels = 0\n",
+    "    if train_on_gpu:\n",
+    "        labels = labels.cuda()\n",
+    "    criterion = nn.BCEWithLogitsLoss()\n",
+    "    # calculate loss\n",
+    "    loss = criterion(D_out.squeeze(), labels)\n",
     "    return loss"
    ]
   },
