answer question at end of notebook about improving the generated faces.

--- a/dlnd_face_generation.ipynb
+++ b/dlnd_face_generation.ipynb
@@ -1088,7 +1088,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Answer:** (Write your answer in this cell)"
+    "**Answer:** The model could be improved by focusing the input data to a more specific face type and limit data diversity. For example, many images contain faces with or without glasses, hats, jewelry, etc. If the input data were to target specific faces, say, men with short hair and similar complexion who are not wearing glasses, then the model may learn those features better and generate better faces of that type. To include diversity may require a more complex or deeper model. The model could have been bigger, but I chose to go with the suggested model from the DCGAN paper and previous examples in this course. There are only three conv/deconv layers in each model and the dimensions are 32, 64, and 128. These models could've been made to be deeper or larger. Similarly, the fully connected layer could've been larger too. The optimization strategy was chosen based on the DCGAN paper, but more research could prove to be beneficial. The more training epochs, the better the faces have been. I've trained several times with 5, 10, 50, or more epochs. There does seem to be a marginal return though, so just increasing the training epochs is not the only good way to improve the generated faces. "
    ]
   },
   {
